Add custom icons for GUI and hotkey daemon
- New flat design icons matching the project aesthetic
- GUI: Upload arrow icon
- Hotkey: Option key (⌥) icon
- Updated Makefile for easier local installation

--- a/gui/frontend/package.json
+++ b/gui/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "Frontend for imgupv2 GUI",
   "main": "index.html",
   "scripts": {
-    "build": "echo 'No build step required'",
+    "build": "cp index.html main.js style.css dist/ && cp -r wailsjs dist/",
     "dev": "echo 'No dev server required'"
   }
 }
