--- a/gui/hotkey/imgupv2-hotkey.app/Contents/Info.plist
+++ b/gui/hotkey/imgupv2-hotkey.app/Contents/Info.plist
@@ -12,6 +12,8 @@
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
     <string>1.0</string>
+    <key>CFBundleIconFile</key>
+    <string>iconfile</string>
     <key>LSMinimumSystemVersion</key>
     <string>10.12</string>
     <key>LSUIElement</key>
